CHATS_SIT/force-app/main/default/objects/T_PROVR_PREF__c.object
<CustomObject>
    <fields>
        <fullName>CDE_PREF_CORR_PROVR__c</fullName>
        <description>Correspondence Preference</description>
        <label>Correspondence Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_COR_PREF</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_PREF_LANG_PROVR__c</fullName>
        <description>Language Preference</description>
        <label>Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00057</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipName>Correspondence_and_Lang_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IND_ACTIVE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active?</description>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <label>Correspondence and Language Preferences</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IND_ACTIVE__c</columns>
        <columns>CDE_PREF_CORR_PROVR__c</columns>
        <columns>CDE_PREF_LANG_PROVR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correspondence and Language Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>