CHATS_SIT/force-app/main/default/objects/T_PROVR_PREF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IND_ACTIVE__c</columns>
    <columns>CDE_PREF_CORR_PROVR__c</columns>
    <columns>CDE_PREF_LANG_PROVR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>